@@ -15,31 +15,33 @@
  */
 
 plugins {
-  id 'org.unbroken-dome.xjc' version '1.1.3'
+  id 'org.unbroken-dome.xjc' version '1.4.1'
   id 'com.github.hauner.jarTest' version '1.0.1'
 }
 
 apply plugin: EhDeploy
+apply plugin: 'biz.aQute.bnd.builder'
 apply plugin: 'com.github.hauner.jarTest'
 
 dependencies {
   api project(':api')
   implementation project(':core')
   implementation project(':impl')
+  implementation "org.glassfish.jaxb:jaxb-runtime:$parent.jaxbVersion"
+
   testImplementation 'org.xmlunit:xmlunit-core:2.6.0', 'org.xmlunit:xmlunit-matchers:2.6.0'
   xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-fluent-api:3.0'
   xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-basics-annotate:1.1.0'
 }
 
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
+jar {
+  bnd (
+    'Export-Package': 'org.ehcache.xml, org.ehcache.xml.exceptions, org.ehcache.xml.model',
+  )
 }
 
 xjcGenerate {
-  source = fileTree('src/main/resources') { include '*.xsd' }
-  targetPackage = 'org.ehcache.xml.model'
+  source = ['src/main/resources/ehcache-core.xsd', 'src/main/resources/ehcache-multi.xsd']
   extension = true
   extraArgs = ['-Xfluent-api', '-Xannotate']
 }
